# QCDark2

./: .gitignore  3D_overlaps_testing.py  README.md  RPA_dielectric_testing.py  RPA_dielectric_testing_helper.py  binning.py  binning_testing.py  cartesian_moments.py  dark_objects_routines.py  dft_routines.py  dft_testing_functions.py  dielectric_functions.py  epsilon_comparison.py  epsilon_helper.py  epsilon_routines.py  epsilon_testing.py  input_parameters.py  interp.py  lfe_testing.py  opt_scratch.py  plasmon_peak.ipynb  plots.ipynb  pyproject.toml  restructuring_notes.md  routines.py  rpa_dielectric_cython.pyx  setup.py  tester_func.py  tests.py  utils.py
bandstructure_testing/: Ge_bands.dat.gnu  bandstructure_plot.py  dft_testing_functions.py
cython_testing/: AO_arr.npy  R_id.npy  coeff_arr.npy  cython_scratch.py  cython_scratch.py.prof  cython_testing.c  cython_testing.html  cython_testing.pyx  ints_y.npy  primgauss_arr.npy  setup.py
dielectric_functions/: README.md
dielectric_pyscf/: __init__.py  __main__.py  binning.py  cartesian_moments.py  dark_matter_rates.py  dark_objects_routines.py  delta_testing.py  dft_routines.py  dielectric_functions.py  epsilon_helper.py  epsilon_routines.py  epsilon_utils.py  input_parameters.py  kramers_kronig.py  lfe_testing.py  routines.py  utils.py
docs/: Gemfile  README.md  _config.yml  index.md
examples/: DM_calculations.ipynb  plot_templates.py
materials/: input_paramters_GaAs.py  input_paramters_Ge.py  input_paramters_Si.py
mpi_testing/: mpi_testing.py
qcdark2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+55 files in other folders)
